Fix content overflowing issue

--- a/src/less/dashboard.less
+++ b/src/less/dashboard.less
@@ -13,8 +13,10 @@
 		width: 200px;
 		border: 1px solid @border-color;
 		margin: 5px;
+		padding: 5px;
 		cursor: pointer;
 		border-radius: @border-radius;
+		overflow-y: auto;
 
 		.title {
 			color: @normal-foreground-color;
